--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url('/images/bg3.jpg');
+  background-image: url('static/css/bg2.jpg');
   background-size:cover;
   background-clour:bisque;
   }
