--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url('bg2.jpg');
+  background-image: url('images/bg2.jpg');
   background-size:cover;
   background-clour:bisque;
   }
